tests/ui/enum/unimplemented.stderr
error: proc-macro derive panicked
 --> tests/ui/enum/unimplemented.rs:3:10
  |
3 | #[derive(Jsonable)]
  |          ^^^^^^^^
  |
  = help: message: Unimplemented
