tests/ui/enum/unimplemented.rs
use jsonable::*;

#[derive(Jsonable)]
enum Enum {
    ASDF
}

fn main()  {}